function aan de button gegeven

--- a/voorbeeld.html
+++ b/voorbeeld.html
@@ -22,7 +22,7 @@
                     Bezorg postcode
                 </label>
                 <input type="text" name="" id="postcode1">
-                <button>Ga door</button>
+                <button onclick="doorgaan()">Ga door</button>
             </div>
         </form>
     </div>
@@ -35,7 +35,7 @@
                     postcode van uw huis
                 </label>
                 <input type="text" name="" id="postcode2">
-                <button>Ga door</button>
+                <button onclick="doorgaan()">Ga door</button>
             </div>
         </form>
     </div>
